<resources>
    <string name="app_name">RedditClone</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="preferences">Preferences</string>
    <string name="about">About</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="add_item">Add</string>
    <string name="edit_item">Edit</string>
    <string name="remove_item">Remove</string>
    <string name="save_item">Save</string>
    <string name="cancel_item">Cancel</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="places">Places</string>
    <string name="error">Error</string>
    <string name="set_as_main">Set as main</string>
    <string name="notifications">Notifications</string>
    <string name="sync_data">Sync data</string>
    <string name="home_long">Map</string>
    <string name="places_long">Places to review</string>
    <string name="preferences_long">Change your preferences</string>
    <string name="about_long">Get to know about us</string>
    <string name="sync_data_long">Sync data from the repo</string>
    <string name="location_disabled_message">Your Locations seems to be disabled, do you want to enable it?</string>
    <string name="oops">Ooops</string>
    <string name="sure">Sure</string>
    <string name="no">No</string>
    <string name="view_profile">View Profile</string>
    <string name="second_activity">SECOND ACTIVITY</string>
    <string name="title_activity_detail">Detail</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_new">New</string>

    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Closed</string>

    <!--Drawer-->
    <string name="main_page">Main Page</string>
    <string name="main_page_long">Browse Main Page</string>
    <string name="communities">Communities</string>
    <string name="communities_long">Browse Communities</string>
    <string name="settings">Settings</string>
    <string name="settings_long">Change Settings</string>
    <string name="logout">Log out</string>
    <string name="login">Login</string>
    <string name="registration">Register</string>
    <string name="users">Users</string>
    <string name="users_long">Browse Users</string>

    <!--Login-->
    <string name="login_form_title">Login</string>
    <string name="login_form_username">Username</string>
    <string name="login_form_password">Password</string>
    <string name="login_form_login">LOGIN</string>

    <!--Post_List-->
    <string name="community_random">r/Community</string>
    <string name="flair_random">Flair</string>

    <!--Registration-->
    <string name="registration_form_title">Registration</string>
    <string name="registration_form_username">Username</string>
    <string name="registration_form_password">Password</string>
    <string name="registration_form_email">Email</string>
    <string name="registration_form_displayName">Display Name</string>
    <string name="registration_form_registration">REGISTRATION</string>
    <string name="edit_your_info">Edit Your Info</string>
    <string name="display_name">Display Name</string>
    <string name="description">Description</string>
    <string name="go_back">Go Back</string>
    <string name="welcome_main_page">Welcome to the Front Page of Reddit!\n Browse and find the things that you like.</string>
    <string name="add_a_comment">Add a Comment</string>
    <string name="text">Text</string>
    <string name="add">Add</string>
    <string name="browse_through_all_the_communities_and_find_the_one_you_like">Browse through all the Communities and find the one you like.</string>
    <string name="add_a_report">Add a Report</string>
    <string name="report_reason">Report Reason</string>
    <string name="community_name">Community Name</string>
    <string name="post_title">Post Title</string>
    <string name="some_random_description_of_a_community">Some random description of a Community.</string>
    <string name="suspend">Suspend</string>
    <string name="posts_in_this_community">Posts in this Community:</string>
    <string name="post">Post</string>
    <string name="edit">Edit</string>


</resources>