<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.coordinatorlayout.widget.CoordinatorLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingTop="8dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="5dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical"
                                android:padding="10dp"
                                android:layout_marginBottom="30dp">

                                <TextView
                                    android:id="@+id/selectedCommunityName"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/community_name"
                                    android:textSize="30sp"
                                    android:layout_marginBottom="5dp" />


                                <TextView
                                    android:layout_marginTop="10dp"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:textColor="#C0424E"
                                    android:text="@string/description"
                                    android:textSize="23sp" />

                                <TextView
                                    android:id="@+id/selectedCommunityDescription"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/some_random_description_of_a_community"
                                    android:textSize="16sp" />
                            </LinearLayout>


                        </androidx.cardview.widget.CardView>


                        <LinearLayout
                            android:layout_marginTop="10dp"
                            android:id="@+id/communityOwnerOptions"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center">

                            <Button
                                android:id="@+id/selectedCommunityEditButton"
                                android:layout_gravity="center"
                                android:background="@color/edit_button"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/edit" />

                            <Button
                                android:id="@+id/selectedCommunitySuspendButton"
                                android:layout_gravity="center"
                                android:layout_marginStart="100dp"
                                android:background="@color/grey"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/suspend" />


                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAlignment="center"
                            android:layout_marginTop="10dp"
                            android:textStyle="bold"
                            android:layout_marginStart="60dp"
                            android:text="@string/posts_in_this_community"
                            android:textSize="25sp" />

                        <Button
                            android:id="@+id/selectedCommunityAddPostButton"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="10dp"
                            android:background="@color/holo_blue"
                            android:text="@string/post" />
                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1.5dp"
                            android:background="#C2C2C2"
                            tools:layout_editor_absoluteY="101dp"
                            app:layout_constraintBottom_toBottomOf="@id/selectedCommunityAddPostButton" />

                        <androidx.recyclerview.widget.RecyclerView
                            android:id="@+id/rvPostsList"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_marginTop="10dp"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </LinearLayout>

                </androidx.core.widget.NestedScrollView>


            </androidx.coordinatorlayout.widget.CoordinatorLayout>

        </FrameLayout>

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>