<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
xmlns:card_view="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto">

<androidx.drawerlayout.widget.DrawerLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:openDrawer="start">

    <LinearLayout
        android:id="@+id/mainContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                tools:context=".activities.EditPostActivity"
                android:orientation="vertical">


                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="530dp"
                    android:layout_margin="30dp"
                    card_view:cardCornerRadius="10dp"
                    card_view:cardElevation="8dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="550dp"
                        android:orientation="vertical"
                        android:padding="30dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:paddingBottom="10dp"
                            android:text="@string/edit_your_info"
                            android:textAlignment="center"
                            android:textSize="25sp"
                            android:layout_marginBottom="20dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/display_name"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/displayNameEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textSize="18sp" />

                        <EditText
                            android:id="@+id/userDescriptionEdit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textMultiLine" />

                        <Button
                            android:id="@+id/buttonEditInfo"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:text="Edit"
                            android:textSize="15sp" />

                        <Button
                            android:id="@+id/buttonEditInfoGoBack"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:layout_marginTop="5dp"
                            android:text="@string/go_back"
                            android:textSize="15sp" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

        </FrameLayout>

    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/nav_header"
        app:menu="@menu/drawer_menu" />

</androidx.drawerlayout.widget.DrawerLayout>

</LinearLayout>